JPERF-479 Create a work context when executing remote actions and Work Context dependency is available.

--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -312,6 +312,10 @@
 			<version>4.2.2</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.atlassian.workcontext</groupId>
+			<artifactId>atlassian-work-context-doorway</artifactId>
+		</dependency>
 	</dependencies>
 
     <build>
