JPERF-479 Move dependency scope to concrete dependency declaration; Use fluent API to open WorkContextDoorway (now IDEA displays a warning about the "unused" variable - arghhh).

--- a/cpji-jira-plugin/pom.xml
+++ b/cpji-jira-plugin/pom.xml
@@ -315,6 +315,7 @@
 		<dependency>
 			<groupId>com.atlassian.workcontext</groupId>
 			<artifactId>atlassian-work-context-doorway</artifactId>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
