--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -16,7 +16,7 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cpji-jira-plugin</artifactId>
 			<version>${project.version}</version>
-            <scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
@@ -25,21 +25,22 @@
 		<dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>atlassian-jira-pageobjects</artifactId>
-			<scope>compile</scope>
+			<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-core</artifactId>
+			<scope>provided</scope>
         </dependency>
 		<dependency>
 			<groupId>com.atlassian.selenium</groupId>
 			<artifactId>atlassian-pageobjects-api</artifactId>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
         <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-webdriver-tests</artifactId>
-			<scope>compile</scope>
+			<scope>provided</scope>
         </dependency>
 		<!--<dependency>-->
 			<!--<groupId>com.sun.jersey.contribs</groupId>-->
@@ -49,11 +50,12 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>4.2.1-atlassian-2</version>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.atlassian.jira.tests</groupId>
 			<artifactId>jira-testkit-client</artifactId>
+			<scope>provided</scope>
 		</dependency>
 		<!--<dependency>-->
 			<!--<groupId>rhino</groupId>-->
@@ -79,10 +81,12 @@
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
 			<version>2.10.4</version>
+			<scope>provided</scope>
 		</dependency>
         <dependency>
             <groupId>com.atlassian.jira</groupId>
             <artifactId>jira-view-issue-plugin</artifactId>
+			<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
