--- a/pom.xml
+++ b/pom.xml
@@ -116,12 +116,12 @@
             <dependency>
                 <groupId>com.atlassian.jira</groupId>
                 <artifactId>jira-rest-java-client-api</artifactId>
-                <version>2.0.0-m31</version>
+                <version>5.0.4</version>
             </dependency>
             <dependency>
                 <groupId>com.atlassian.jira</groupId>
                 <artifactId>jira-rest-java-client-core</artifactId>
-                <version>2.0.0-m31</version>
+                <version>5.0.4</version>
             </dependency>
             <dependency>
                 <groupId>org.codehaus.jettison</groupId>
