GRD-588: disable fastdev

--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -131,6 +131,7 @@
                             <version>${jira.version}</version>
                             <dataPath>${project.basedir}/src/test/amps/jira1-generated-test-resources.zip</dataPath>
 							<jvmArgs>-Xmx768m -XX:MaxPermSize=300m -Datlassian.plugins.enable.wait=300</jvmArgs>
+                            <enableFastdev>false</enableFastdev>
                             <pluginArtifacts>
                                 <pluginArtifact>
                                     <groupId>com.atlassian.cpji</groupId>
@@ -162,6 +163,7 @@
                             <jvmDebugPort>5003</jvmDebugPort>
                             <dataPath>${project.basedir}/src/test/amps/jira2-generated-test-resources.zip</dataPath>
 							<jvmArgs>-Xmx768m -XX:MaxPermSize=300m -Datlassian.plugins.enable.wait=300</jvmArgs>
+                            <enableFastdev>false</enableFastdev>
                             <pluginArtifacts>
                                 <pluginArtifact>
                                     <groupId>com.atlassian.cpji</groupId>
@@ -193,7 +195,8 @@
 							<jvmDebugPort>5004</jvmDebugPort>
 							<dataPath>${project.basedir}/src/test/amps/jira3-generated-test-resources.zip</dataPath>
 							<jvmArgs>-Xmx768m -XX:MaxPermSize=300m -Datlassian.plugins.enable.wait=300</jvmArgs>
-							<pluginArtifacts>
+                            <enableFastdev>false</enableFastdev>
+                            <pluginArtifacts>
 								<pluginArtifact>
 									<groupId>com.atlassian.cpji</groupId>
 									<artifactId>cpji-jira-plugin</artifactId>
