--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -241,8 +241,17 @@
                     <excludes>
                         <exclude>it/**/*.java</exclude>
                     </excludes>
-                </configuration>
+					<skip>${skipTests}</skip>
+				</configuration>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<skip>${skipTests}</skip>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
@@ -268,7 +277,8 @@
     <properties>
         <!-- Whether the tests should be run detached from the current screen -->
         <xvfb.enable>true</xvfb.enable>
-        <jira.qunit.testoutput.location>${project.basedir}/target/test-results</jira.qunit.testoutput.location>
+		<skipTests>false</skipTests>
+		<jira.qunit.testoutput.location>${project.basedir}/target/test-results</jira.qunit.testoutput.location>
     </properties>
 
 	<profiles>
