Revert "GRD-588: change plugin dependency in tests to test-only"
This reverts commit f5d80aa

--- a/cpji-jira-plugin-test/pom.xml
+++ b/cpji-jira-plugin-test/pom.xml
@@ -16,7 +16,7 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>cpji-jira-plugin</artifactId>
 			<version>${project.version}</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
