--- a/pom.xml
+++ b/pom.xml
@@ -116,12 +116,12 @@
             <dependency>
                 <groupId>com.atlassian.jira</groupId>
                 <artifactId>jira-rest-java-client-api</artifactId>
-                <version>5.0.4</version>
+                <version>${jira.rest.client.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.atlassian.jira</groupId>
                 <artifactId>jira-rest-java-client-core</artifactId>
-                <version>5.0.4</version>
+                <version>${jira.rest.client.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.codehaus.jettison</groupId>
@@ -184,19 +184,20 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <cpji.build.directory>target</cpji.build.directory>
         <atlassian.qunit.version>1.0.0-m5</atlassian.qunit.version>
-        <jira.version>7.11.1</jira.version>
+        <jira.version>8.0.0-m0014</jira.version>
         <jira.compile.version>${jira.version}</jira.compile.version>
         <jira.data.version>${jira.version}</jira.data.version>
         <my.sal.version>3.0.2</my.sal.version>
         <rest.version>3.0.0-m012</rest.version>
         <applinks.version>5.0.0</applinks.version>
-        <testkit.version>7.7.8</testkit.version>
+        <testkit.version>8.0.1</testkit.version>
         <test-basics.version>1.9.5</test-basics.version>
         <amps.version>6.3.16</amps.version>
         <atlassian.selenium.version>2.5.1-jira-1</atlassian.selenium.version>
         <jersey.version>1.8-atlassian-16</jersey.version>
         <failOnMilestoneOrReleaseCandidateDeps>false</failOnMilestoneOrReleaseCandidateDeps>
         <rest.doc.generation.skip>true</rest.doc.generation.skip>
+        <jira.rest.client.version>5.1.0</jira.rest.client.version>
     </properties>
 
     <profiles>
