--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <cpji.build.directory>target</cpji.build.directory>
-        <jira.version>8.0.0-QR-20181025063203</jira.version>
+        <jira.version>8.0.0-m0020</jira.version>
         <jira.compile.version>${jira.version}</jira.compile.version>
         <jira.data.version>${jira.version}</jira.data.version>
         <spring.version>5.0.7.RELEASE</spring.version>
