LOTUS-501: Introduce automatic tests (continues e52eb1f)

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,6 +15,9 @@ pipelines:
           caches:
             - maven
           script:
+            - set -euf
+            - pipe: atlassian/artifactory-sidekick:v1
+            - source .artifactory/activate.sh
             - mvn -B verify --file pom.xml
           after-script:
               # Collect checkstyle results, if any, and convert to Bitbucket Code Insights.
