--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>com.atlassian.pom</groupId>
         <artifactId>closedsource-pom</artifactId>
-        <version>5.2.40</version>
+        <version>5.0.29</version>
     </parent>
 
     <groupId>com.atlassian.cpji</groupId>
     <artifactId>cpji-jira</artifactId>
-    <version>10.1.0</version>
+    <version>10.1.1</version>
     <name>Remote copying of issues - Parent POM</name>
     <packaging>pom</packaging>
 
@@ -62,6 +62,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Exclude problematic JNDI dependency -->
+            <dependency>
+                <groupId>jndi</groupId>
+                <artifactId>jndi</artifactId>
+                <version>1.2.1</version>
+                <scope>provided</scope>
+            </dependency>
             <dependency>
                 <groupId>com.atlassian.selenium</groupId>
                 <artifactId>atlassian-pageobjects-api</artifactId>
@@ -94,6 +101,10 @@
                         <groupId>commons-httpclient</groupId>
                         <artifactId>commons-httpclient</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>jndi</groupId>
+                        <artifactId>jndi</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
@@ -109,6 +120,10 @@
                     <exclusion>
                         <groupId>io.atlassian.util.concurrent</groupId>
                         <artifactId>atlassian-util-concurrent</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>jndi</groupId>
+                        <artifactId>jndi</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
@@ -270,7 +285,49 @@
         <tag>cpji-jira-10.0.0</tag>
     </scm>
 
+    <repositories>
+        <repository>
+            <id>atlassian-public</id>
+            <url>https://packages.atlassian.com/mvn/maven-external/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+        </repository>
+        <repository>
+            <id>atlassian-central</id>
+            <url>https://packages.atlassian.com/mvn/maven-atlassian-external/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+        </repository>
+    </repositories>
+
     <pluginRepositories>
+        <pluginRepository>
+            <id>atlassian-public</id>
+            <url>https://packages.atlassian.com/mvn/maven-external/</url>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
+        </pluginRepository>
         <pluginRepository>
             <id>scala</id>
             <name>Scala Tools</name>
