--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            <!-- <plugin>
                 <groupId>com.atlassian.maven.plugins</groupId>
                 <artifactId>artifactory-staging-maven-plugin</artifactId>
                 <version>3.0.4</version>
@@ -261,7 +261,7 @@
                         <phase>none</phase>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin> -->
         </plugins>
     </build>
 
